DIM-3 add forgot password view & fix overflow page

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -456,7 +456,7 @@
   display: flex;
   flex-direction: column;
   left: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   position: absolute;
   right: 0;
   top: 0;
@@ -480,6 +480,7 @@
   flex: 1;
   flex-direction: column;
   position: relative;
+  overflow-y: auto;
 }
 .AppMain__layer__PageAndTopBar {
   flex: 1;
